# simple-jump-diffusion-monte-carlo-simulation

./: PROJECT_STRUCTURE.txt  README.md  examples.ipynb  jump_diffusion.py  pyproject.toml  tests.py
examples/: simulate_paths.py
src/jump_processes/: __init__.py  jump_diffusion.py
tests/: conftest.py  test_jump_diffusion.py
